--- a/example_playbooks/arubaos_controller/create_node_hierarchy.yml
+++ b/example_playbooks/arubaos_controller/create_node_hierarchy.yml
@@ -1,17 +1,19 @@
-- name: Create TACACS server
+- name: Create a new node hierarchy
   hosts: localhost
   connection: local
   gather_facts: no
   vars_files:
     - variables.yml
+
   tasks:
-    - name: Create a new TACACS server config
+
+    - name: Create a Hierarchy node
       arubaos_controller_config:
         host: "{{ mm_ip }}"
         username: "{{ mm_username }}"
         password: "{{ mm_password }}"
         method: "{{ method_type }}"
-        api_name: tacacs_server
         config_path: "{{ configuration_path }}"
-        data: { "tacacs_server_name": "new_tacacs", "tacacs_host": { "host": "2.2.2.2"}, "tacacs_key": {"key": "aruba123"}}
-        verify_cert: True
+        api_name: configuration_node
+        data: { "node-path": "/md/SJC"}
+        verify_cert: false
