--- a/example_playbooks/arubaos_controller/firmware_upgrade.yml
+++ b/example_playbooks/arubaos_controller/firmware_upgrade.yml
@@ -13,7 +13,7 @@
         method: POST
         api_name: copy_scp_system
         config_path: /mm
-        data: { "partition_num": "partition1","scphost": "10.1.1.41","username": "tftp","filename": "ArubaOS_70xx_8.7.0.0-mm-dev_74441","passwd": "tftp" }
+        data: { "partition_num": "partition1","scphost": "10.10.10.10","username": "admin","filename": "ArubaOS_70xx_8.6.0.0_74441","passwd": "admin123" }
         verify_cert: True
 
     - name: Execute a show boot command
