--- a/example_playbooks/aruba_instant/zone.yml
+++ b/example_playbooks/aruba_instant/zone.yml
@@ -13,8 +13,4 @@
         method: POST
         api_type: action
         api_name: zone
-        data: { "iap_ip_addr" : "<iap-ip-address>", "zone_info" : { "action" : "create", "zonename" : "<change-me>" } }
-
-
-
-# python arubainstant_config.py '{"ANSIBLE_MODULE_ARGS":{"host":"10.70.172.250", "username":"admin", "password":"Aruba1234", "method":"POST", "api_type":"action" ,"api_name":"hostname", "data":{ "iap_ip_addr" : "10.70.172.251", "hostname_info" : { "hostname" : "slave-AP:ae:16" } } }}'
+        data: { "iap_ip_addr" : "1.1.1.1", "zone_info" : { "action" : "create", "zonename" : "my-zone-name" } }
